--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Social App</title>
+    <title>LeonteSocial App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
